# anomaly

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py  schemas.py  settings.py
app/models/: autoencoder.py
app/services/: dataset.py  inference.py  jobs.py  labels.py  models.py  projects.py  scoring.py  storage.py  training.py  yolo_dataset.py  yolo_training.py
app/utils/: __init__.py  identifiers.py  paths.py
data/models/cam_park_01-20250828-160958/: config.yaml  threshold.json
tests/: conftest.py  test_api.py  test_inference.py  test_jobs.py  test_security.py  test_storage.py  test_training.py
tmp/: last_train_error.txt
ui/: fine_tune.html  index.html  label.html  models.html  projects.html  yolo.html
ui/projects/: index.html
